# xgcm

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  README.md.xgcm  STYLE.md  ini.c  linit.c  linit.h  simple_hmap.c  simple_hmap.h  simple_ll.c  simple_ll.h  string_buffer.c  string_buffer.h  utils.c  utils.h  xgcm.c  xgcm_conf.c  xgcm_conf.h  xgcm_lua.c  xgcm_lua.h  xgcm_parser.c  xgcm_parser.h  xgcm_traversal.c  xgcm_traversal.h
example/: sample  sample.xgcm  sample_xgcmrc  sample_xgcmrc_2
ini/: ini.c  ini.h
